l'édition d'un gossip fonctionne

--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -8,3 +8,8 @@
   <%= @gossip.content %>
 </p>
 
+
+<p> <%= link_to 'Back', gossips_path %> </p>
+<p> <%= link_to('Editer mon gossip', edit_gossip_path) %> </p> 
+
+
